tests/parsing/smtlib/v2.7/errors/009_exists_missing_body_1.smt2
(set-logic ALL)
(assert (exists ((x int)) _))
